--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,7 +10,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx2048M -XX\:MaxHeapSize\=32g
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -38,8 +38,18 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 newArchEnabled=false
 
 # Application ID
-APPLICATION_ID=chat.rocket.reactnative
+APPLICATION_ID=chat.clipping.reactnative
 
 # App properties
-VERSIONCODE=999999999
-BugsnagAPIKey=""
+VERSIONCODE=1000000009
+BugsnagAPIKey="a9b854299622fe64d2733e1b9a4976bf"
+
+MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
+MYAPP_UPLOAD_KEY_ALIAS=clippingapp
+MYAPP_UPLOAD_STORE_PASSWORD=clippingapp
+MYAPP_UPLOAD_KEY_PASSWORD=clippingapp
+
+KEYSTORE=my-upload-key.keystore
+KEYSTORE_PASSWORD=clippingapp
+KEY_PASSWORD=clippingapp
+KEY_ALIAS=clippingapp
