--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		"expo-web-browser": "10.2.1",
 		"hoist-non-react-statics": "3.3.2",
 		"i18n-js": "3.9.2",
+		"ios-deploy": "^1.11.4",
 		"js-base64": "3.6.1",
 		"js-sha256": "^0.9.0",
 		"lint-staged": "^11.1.0",
